# textadventure

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Door.cpp  LocationTile.h  Makefile  README  README.md  Room.h  World.cpp  character.h  cmake_install.cmake  installTextAdventure  login.cpp  pseudoServer.txt  pseudousername.txt  widget.h  widgetDesign.txt
Data Files/: midgaard.yml
DesignArchitecture/: Program Startup.docx  QuickSummary
cmpt373Mello/: .#gitCommit  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
cmpt373Mello/Server/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  TCPCodeServer.cpp  cmake_install.cmake
cmpt373Mello/Server/Dataflow/: CMakeLists.txt  CMakeLists.txt~  Makefile  TCPDataflow.cpp  TCPDataflow.cpp~  cmake_install.cmake
cmpt373Mello/Server/Server/: CMakeLists.txt  CMakeLists.txt~  Makefile  TCPServer.h  TCPServer.h~  cmake_install.cmake
cmpt373Mello/clientStuff/: CMakeLists.txt  CMakeLists.txt~  Makefile  TCPClient.cpp~  TCPClient.h~  TCPCodeClient.cpp~  TCPDataflow.h~  cmake_install.cmake
cmpt373Mello/clientStuff/Client/: CMakeLists.txt  CMakeLists.txt~  Makefile  TCPClient.h~  cmake_install.cmake
cmpt373Mello/clientStuff/Dataflow/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
data/: spellstest.yml  test.yml  userdata.txt
docs/: building.rst  conf.py  index.rst  overview.rst  usage.rst
docs/DesignArchitecture/: Class Design Ideas.docx  Top Level Design.docx
include/: CMakeLists.txt  CMakeLists.txt~  gameEngine.h
include/dataInterfaceHeaders/: dataInterfaceBase.h  npcDataInterface.h  objDataInterface.h  roomDataInterface.h
include/gameEngineHeaders/: Character.h  DefSpell.h  Door.h  Door.h~  Extended.h  GameEngine.h  HealSpell.h  Monster.h  NPC.h  Object.h  OffSpell.h  Reset.h  Room.h  Room.h~  Spell.h  SpellShop.h  Widget.h  World.h  World.h~  gameEngine.h
include/networkingHeaders/: TCPClient.h~
include/userAccountHeaders/: CharacterProfile.h~  Login.h  Login.h~
include/userInterfaceHeaders/: Commands.h  GameEngineFunctions.h  Observer.h  ObserverList.h  UserInterface.h  test.h
include/yaml-cpp/: parser.h~
lib/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
lib/dataInterface/: CMakeLists.txt  dataEmitter.cpp  npcDataInterface.cpp  objDataInterface.cpp  resetDataInterface.cpp  roomDataInterface.cpp  spellDataInterface.cpp
lib/gameEngine/: CMakeLists.txt  CMakeLists.txt~  Character.cpp  DefSpell.cpp  Door.cpp  Extended.cpp  GameEngine.cpp  HealSpell.cpp  Makefile  Monster.cpp  NPC.cpp  Object.cpp  OffSpell.cpp  Reset.cpp  Room.cpp  Spell.cpp  SpellShop.cpp  Widget.cpp  World.cpp  WorldCreator.cpp  cmake_install.cmake
lib/networkingInterface/: CMakeLists.txt  CMakeLists.txt~  Makefile  TCPClient.cpp  TCPDataflow.cpp  TCPServer.cpp  cmake_install.cmake
lib/npcDataInterface/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  npcDataInterface.cpp
lib/objDataInterface/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  objDataInterface.cpp
lib/roomDataInterface/: CMakeLists.txt  roomDataInterface.cpp
lib/userAccount/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  login.cpp
lib/userInterface/: CMakeLists.txt  CMakeLists.txt~  Commands.cpp  Commands.cpp~  Makefile  ObserverList.cpp  ObserverList.cpp~  UserInterface.cpp  UserInterface.cpp~  cmake_install.cmake
networking/clientStuff/: Makefile  TCPClient.h  TCPCodeClient.cpp  tcpclient
networking/src/: Makefile  TCPDataflow.h  TCPServer.cpp  TCPServer.cpp~  tcpserver
tools/: CMakeLists.txt  Makefile  cmake_install.cmake
tools/gameEngineTesting/: CMakeLists.txt  testGameEngine.cpp
tools/mainProgram/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  gameEngineTest.cpp  jasonWidgets.cpp  main.cpp  main.cpp~  networkClientTest.cpp  networkServerTest.cpp  networkTest.cpp
tools/widgetTesting/: jasonWidgets.cpp
usercreation/: .CharacterProfile.h.swp  .login.cpp.swo  .login.cpp.swp  .nfs0000000000b8b84d000000cd  CharacterProfile.h  CharacterProfile.h~  login  login.cpp  userdata.txt  userdata.txt~
